--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "description": "NodeJS Express API Sandbox",
   "main": "src/index.js",
   "scripts": {
-    "start": "nodemon ./src/index.js"
+    "start": "nodemon"
   },
   "keywords": [],
   "author": "Gary Chisholm",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "argon2": "^0.25.0",
+    "body-parser": "^1.19.0",
+    "crypto": "^1.0.1",
+    "express": "^4.17.1",
+    "express-jwt": "^5.3.1",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "nodemon": "^1.19.4"
